objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Acccount_Number__c</fullName>
        <description>Account Number related to the content</description>
        <formula>Account__r.External_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Number related to the content</inlineHelpText>
        <label>Acccount Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Executive working on the renewal</description>
        <inlineHelpText>Account Executive working on the renewal</inlineHelpText>
        <label>Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account related to content</description>
        <inlineHelpText>Account related to content</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Content Versions</relationshipLabel>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Renewal_Release_Date__c</fullName>
        <description>Actual date in which content was shared</description>
        <inlineHelpText>Actual date in which content was shared</inlineHelpText>
        <label>Actual Renewal Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Underwriter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dental Underwriter working on the renewal</description>
        <inlineHelpText>Dental Underwriter working on the renewal</inlineHelpText>
        <label>Dental Underwriter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Versions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dental__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicating content has a dental component</description>
        <inlineHelpText>Indicating content has a dental component</inlineHelpText>
        <label>Dental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Arrangement__c</fullName>
        <description>Funding arrangement on the renewal</description>
        <inlineHelpText>Funding arrangement on the renewal</inlineHelpText>
        <label>Funding Arrangement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Cost Plus</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>Premium Prospective</fullName>
                </value>
                <value>
                    <fullName>Premium Retrospective</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCSC_Division__c</fullName>
        <description>HCSC Division related to the content</description>
        <formula>TEXT(Account__r.HCSC_Division__c)</formula>
        <inlineHelpText>HCSC Division related to the content</inlineHelpText>
        <label>HCSC Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Due__c</fullName>
        <description>Indicating renewal was shared after the planned release date</description>
        <formula>IF(AND(Planned_Exhibit_Release_Date__c &lt;= TODAY(),OR(Actual_Renewal_Release_Date__c &gt; Planned_Exhibit_Release_Date__c, ISBLANK(Actual_Renewal_Release_Date__c))),True,False)</formula>
        <inlineHelpText>Indicating renewal was shared after the planned release date</inlineHelpText>
        <label>Past Due?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Exhibit_Release_Date__c</fullName>
        <description>Date the Underwriter is planning to share renewal</description>
        <inlineHelpText>Date the Underwriter is planning to share renewal</inlineHelpText>
        <label>Planned Renewal Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region related to the content</description>
        <formula>TEXT(Account__r.Region__c )</formula>
        <inlineHelpText>Region related to the content</inlineHelpText>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Effective_Date__c</fullName>
        <description>Date Renewal will be Effective</description>
        <inlineHelpText>Date Renewal will be Effective</inlineHelpText>
        <label>Renewal Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Underwriter working on Renewal</description>
        <inlineHelpText>Underwriter working on Renewal</inlineHelpText>
        <label>Underwriter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Versions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>Renewals</fullName>
        <active>true</active>
        <description>This record type on Content will be used to store Renewals</description>
        <label>Renewals</label>
    </recordTypes>
</CustomObject>